tests/custom_discriminant/fail/missing_discriminant.stderr
error: missing variant discriminant
 --> tests/custom_discriminant/fail/missing_discriminant.rs:5:5
  |
5 |     Bar,
  |     ^^^

error: missing variant discriminant
 --> tests/custom_discriminant/fail/missing_discriminant.rs:7:5
  |
7 |     Thing { foo: u8 },
  |     ^^^^^^^^^^^^^^^^^
